# learning-ebpf

./: README.md  hello.bpf.c  hello.c  justfile  mkfc.sh
bcc-python/: hello.py  hello2.py  hello3.py  hello4.py  hello5.py  hello6.py
count_syscalls/: .dir-locals.el  README.md
count_syscalls/count_syscalls/: Cargo.toml
count_syscalls/count_syscalls-common/: Cargo.toml
count_syscalls/count_syscalls-ebpf/src/: main.rs
count_syscalls/count_syscalls/src/: main.rs
count_syscalls/xtask/src/: build_ebpf.rs  run.rs
count_syscalls2/: Cargo.toml
count_syscalls2/.vim/: coc-settings.json
count_syscalls2/count_syscalls/: Cargo.toml
count_syscalls2/count_syscalls-ebpf/: Cargo.toml
count_syscalls2/count_syscalls-ebpf/src/: main.rs
count_syscalls2/count_syscalls/src/: main.rs
gen-complete/: Cargo.toml  bpftool.fish  rustfmt.toml
gen-complete/src/: codegen.rs  condition.rs  constants.rs  functions.fish  main.rs  tree.rs
hello/: Cargo.toml
hello-buff/: .gitignore  compile_flags.txt
hello-common/: Cargo.toml
hello-common/src/: lib.rs
hello-ebpf/: Cargo.toml
hello-ebpf/src/: main.rs
hello-ping/: .dir-locals.el  Cargo.toml  README.md
hello-ping/.helix/: languages.toml
hello-ping/.vim/: coc-settings.json
hello-ping/hello-ping/: Cargo.toml
hello-ping/hello-ping-common/: Cargo.toml
hello-ping/hello-ping-ebpf/: Cargo.toml
hello-ping/hello-ping-ebpf/src/: main.rs
hello-ping/hello-ping/src/: main.rs
hello-ping/xtask/src/: build_ebpf.rs  run.rs
hello-wall/: Cargo.toml  README.md  ae@192.168.1.112
hello-wall/hello-wall/: Cargo.toml
hello-wall/hello-wall-common/: Cargo.toml
hello-wall/hello-wall-ebpf/: Cargo.toml
hello-wall/hello-wall-ebpf/src/: main.rs
hello-wall/hello-wall/src/: main.rs
hello-wall/server/src/: main.rs
hello-wall/udp-listener/: Cargo.toml
hello-wall/udp-listener/src/: main.rs
hello-wall/xtask/src/: build_ebpf.rs  run.rs
hello/src/: main.rs
hello_ring/: Cargo.toml  README.md
hello_ring/hello-common/src/: lib.rs
hello_ring/hello-ebpf/: Cargo.toml
hello_ring/hello-ebpf/.helix/: config.toml
hello_ring/hello-ebpf/src/: main.rs
hello_ring/hello/src/: main.rs
hello_ring/hello_ring/: .dir-locals.el
hello_ring/hello_ring/hello-common/: Cargo.toml
hello_ring/hello_ring/xtask/src/: build_ebpf.rs
hello_ring/xtask/src/: run.rs
raw_sys/: .dir-locals.el  Cargo.toml
raw_sys/.vim/: coc-settings.json
raw_sys/raw_syscall-common/src/: lib.rs
raw_sys/raw_syscall/src/: main.rs
raw_sys/xtask/src/: build_ebpf.rs
raw_syscall/: Cargo.toml
raw_syscall-common/: Cargo.toml
raw_syscall-ebpf/: Cargo.toml
raw_syscall-ebpf/src/: main.rs
redirect/: .dir-locals.el  README.md  out.pcap
redirect-tcp/: Cargo.toml  README.md  out.pcap
redirect-tcp/redirect-ebpf/src/: main.rs
redirect-tcp/redirect/src/: main.rs
redirect-tcp/server/src/: main.rs
redirect/redirect/: Cargo.toml
redirect/redirect-common/: Cargo.toml
redirect/redirect-ebpf/: Cargo.toml
redirect/redirect-ebpf/src/: main.rs
redirect/redirect/src/: main.rs
redirect/xtask/src/: build_ebpf.rs  run.rs
test-netp/: .dir-locals.el  Cargo.toml  README.md
test-netp/test-netp/: Cargo.toml
test-netp/test-netp-common/: Cargo.toml
test-netp/test-netp-ebpf/: Cargo.toml
test-netp/test-netp-ebpf/src/: main.rs
test-netp/test-netp/src/: main.rs
test-netp/xtask/src/: build_ebpf.rs  run.rs
xdp-test/: main.c
xtask/src/: run.rs
