[package]
name = "raw_syscall-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
bstr = { version = "1.9.1", default-features = false }
raw_syscall-common = { path = "../raw_syscall-common" }

[[bin]]
name = "raw_syscall"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
