[package]
name = "count_syscalls"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
count_syscalls-common = { path = "../count_syscalls-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["full"] }

[[bin]]
name = "count_syscalls"
path = "src/main.rs"
