[package]
name = "redirect-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.1.0"
aya-log-ebpf = "0.1.0"
etherparse = { version = "0.15.0", default-features = false }
redirect-common = { path = "../redirect-common" }
volatile = "0.2.6"

[[bin]]
name = "redirect"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
